Fixed overlapping bug

--- a/src/components/filterWindow/FilterWindow.css
+++ b/src/components/filterWindow/FilterWindow.css
@@ -11,6 +11,7 @@
   padding: 2px;
   font-size: 12px;
   overflow: hidden;
+  z-index: 1;
 }
 
 .filter-window-header {
@@ -23,7 +24,6 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   font-size: 18px;
-  /* text-align: center; */
 }
 
 .close-icon {
